--- a/index.html
+++ b/index.html
@@ -1324,7 +1324,7 @@
                                             <p class="mt-2 mb-0">Ludo Game Preview</p>
                                         </div>
                                     </div>
-                                    <iframe src="https://aesthetic-hummingbird-6c9afa.netlify.app/" 
+                                    <iframe src="https://ludomith.netlify.app/" 
                                             title="Ludo Game"
                                             loading="lazy"
                                             class="position-absolute top-0 start-0 w-100 h-100"
